# Ciencia_Analitica_Datos

./: .gitignore  pyproject.toml
Bibliografia/: Bibliography.docx
Estadistica/: Bayes_Theorem_DataScience.md
Modules/01_module/actividades/Actividad1conceptosBasicos/: main.tex
Modules/01_module/notes/: 01_notes.docx  ~$_notes.docx
Modules/02_module/Combining_Datasets/Data-Science_Merge_and_Join/: Merge-and-Join.ipynb
Modules/02_module/actividades/: Actividad2AnalisisPandas_A01797969.ipynb  Actividad2AnalisisPandas_avance.ipynb
Modules/03_module/: Interacting_with_BD.ipynb  mydata.sqlite
Modules/03_module/Data-Analysis_Plotting_and_Visualization/: Plotting_and_Visualization.ipynb
Modules/03_module/Discretization_Binning/: Binnig.ipynb
Modules/03_module/Feature Scaling and Normalization/: Standardization_and_MinMax.ipynb
Modules/03_module/Hands-On-EDA_Correlation/: Correlation.ipynb
Modules/03_module/Hands-On-EDA_Descriptive_Statistics/: Descriptive_Statistics.ipynb  data.csv
Modules/03_module/Ordinal and One-Hot Encoding/: Encoding.ipynb
Modules/03_module/Scale Data With Outliers for Machine Learning/: Robust.ipynb
Modules/03_module/Transforming Numerical Variables/: Transformation.ipynb
Modules/03_module/actividades/: Actividad3BDManipulacion_A01797969.ipynb  README_Actividad4.md
Sesiones_Sincronicas/01_sesion/: ActividadActiveClass1.ipynb  Forbes_2000_top_company.csv
Sesiones_Sincronicas/02_sesion/: ActividadActiveClass2.ipynb
Sesiones_Sincronicas/03_sesion/: ActividadActiveClass3.ipynb
(+8 files in other folders)
