[project]
name = "ciencia-analitica-datos"
version = "0.1.0"
description = "Entorno de desarrollo para la clase de Ciencia y Analitica de Datos - MNA"
authors = [
    {name = "carloshgalvan95",email = "carloshgalvan95@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
